force-app/main/default/objects/Profession__c/fields/ProfessionCode__c.field-meta.xml
<CustomField>
    <fullName>ProfessionCode__c</fullName>
    <label>ProfessionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>