force-app/main/default/objects/Profession__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scopе</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Professions</relationshipLabel>
    <relationshipName>Professions</relationshipName>
    <type>Lookup</type>
</CustomField>