force-app/main/default/objects/Profession__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>ProfessionCode__c</columns>
    <columns>ExtId__c</columns>
    <columns>Active__c</columns>
    <filterScope>Mine</filterScope>
    <label>all</label>
</ListView>